--- a/app/src/main/res/layout/activity_baza_wykrywacz_swiatel.xml
+++ b/app/src/main/res/layout/activity_baza_wykrywacz_swiatel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".photoDetails">
+    tools:context=".BazaWykrywaczSwiatel">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,22 +12,25 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/back"
+            android:id="@+id/clear"
+            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="MainView"
-            android:text="Usuń wynik" />
+            android:background="#E1FFFFFF"
+            android:onClick="ClearAll"
+            android:text="Wyczyść bazę"
+            android:textStyle="normal" />
 
-        <TextView
-            android:id="@+id/info"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/lightView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            <LinearLayout
+                android:id="@+id/databody"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
