--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="NextView"
-                android:text="Więcej informacji" />
+                android:text="Pokaż bazę" />
 
         </LinearLayout>
 
